--- a/src/CSS/StiloLog.css
+++ b/src/CSS/StiloLog.css
@@ -1,7 +1,13 @@
-body {
-  background-color: #a0bc72; /* Azul */
+html body {
+  background-color: #a0bc72;
 }
 
+.tarjeta-contenedor {
+  display: grid;
+  height: 100vh;
+  place-items: center;
+  justify-content: center;
+}
 
 .tarjeta {
   display: grid;
@@ -11,11 +17,6 @@ body {
   border: 1px solid #ccc;
   border-radius: 10px;
   margin: 0 auto;
-  background-color: #0000FF; /* Azul */
-}
-.tarjeta-contenedor {
-  display: grid;
-  height: 100vh;
-  place-items: center;
-  justify-content: center;  /* Added line */
+  background-color: #2f3b63;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
